# grammys-simulation

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_repeated_contests.py
data/: Grammys-Simuation_Song-Names - Corrupt Artists.csv  Grammys-Simuation_Song-Names - Sheet1.csv  Grammys-Simuation_Song-Names - Top Scoring Songs.csv  Repeated-Results_2000-Voters_2000-Songs_10-Winners.pkl  Repeated-Results_2000-Voters_2000-Songs_20-Winners.pkl  heatmap_10.json  heatmap_10_winners_100_ballot_limit.json  heatmap_10_winners_150_ballot_limit.json  heatmap_10_winners_200_ballot_limit.json  heatmap_10_winners_250_ballot_limit.json  heatmap_10_winners_50_ballot_limit.json  heatmap_15.json  heatmap_15_winners_100_ballot_limit.json  heatmap_15_winners_150_ballot_limit.json  heatmap_15_winners_200_ballot_limit.json  heatmap_15_winners_250_ballot_limit.json  heatmap_15_winners_50_ballot_limit.json  heatmap_20.json  heatmap_20_winners_100_ballot_limit.json  heatmap_20_winners_150_ballot_limit.json  heatmap_20_winners_200_ballot_limit.json  heatmap_20_winners_250_ballot_limit.json  heatmap_20_winners_50_ballot_limit.json  heatmap_5_winners_100_ballot_limit.json  heatmap_5_winners_250_ballot_limit.json  heatmap_5_winners_50_ballot_limit.json  objective_scores_for_1000_songs.pkl  objective_scores_for_2000_songs.pkl  objective_scores_for_500_songs.pkl
data/heatmap/: heatmap_10_winners_100_ballot_limit.json  (+7 more)
src/: __init__.py  condorcet_counting.py  current_method.py  logic.py  ranked_choice_voting.py  simulation.py  story.py  text.yml  townspeople.py  utils.py
(+2 files in other folders)
